Revert "overflow fix"
This reverts commit 77cd85aedf4fc400c708198f9bcd5b750a8c7d2d.

--- a/sites/all/themes/campsite/sass/partials/_menu.scss
+++ b/sites/all/themes/campsite/sass/partials/_menu.scss
@@ -15,17 +15,6 @@
   -webkit-transition: -webkit-transform 300ms ease;
   -webkit-transform: translate3d(0, 0, 0);
 
-  /* 
-    When mobile nav is open, overflow some elements
-    that have negative margin that impedees into the mobile 
-    navigation. 
-   */
-  &.open {
-    #content,
-    #footer {
-      overflow: hidden;
-    }
-  }
 }
 
 #navigation .block-menu-block { // the Main Menu's menu block
@@ -54,6 +43,20 @@
       text-decoration: none;
     }
     &:hover{color:#0077a5;}
+  }
+}
+
+#page {
+  /* 
+    When mobile nav is open, overflow some elements
+    that have negative margin that impedees into the mobile 
+    navigation. 
+   */
+  &.open {
+    #content,
+    #footer {
+      overflow: hidden;
+    }
   }
 }
 
